# henry-rs

./: .gitignore  Cargo.toml
src/: embeds.rs  events.rs  henry_error.rs  main.rs
src/commands/: command_manager.rs  mod.rs
src/commands/management/: mod.rs
src/commands/miscellaneous/: mod.rs
src/db/: mod.rs
src/db/model/: guild.rs
