[package]
name = "henry"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
poise = "0.6.1"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.22"
log = "0.4.29"
thiserror = "2.0.18"
sqlx = { version = "0.8.6", features = ["mysql", "postgres", "runtime-tokio", "sqlite", "tls-native-tls"] }
